{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 137,
  "lineage": "cf666e11-597d-3614-3864-827148897b49",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_wb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d8aabe6ce5d7dfb",
            "arn": "arn:aws:ec2:us-east-2:643965814769:instance/i-002f5821f27d83e85",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-002f5821f27d83e85",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07d1acad447cd6f03",
            "private_dns": "ip-10-0-1-213.us-east-2.compute.internal",
            "private_ip": "10.0.1.213",
            "public_dns": "ec2-3-144-29-118.us-east-2.compute.amazonaws.com",
            "public_ip": "3.144.29.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-007b5ef65cbf6bbc3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-038517857c1f16e79",
            "tags": {
              "Name": "nginx-webserver"
            },
            "tags_all": {
              "Name": "nginx-webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06fbfeecd272e4b48"
            ]
          },
          "dependencies": [
            "aws_key_pair.nginx_key",
            "aws_security_group.sgweb",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc_nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:643965814769:internet-gateway/igw-0568adb378f78c732",
            "id": "igw-0568adb378f78c732",
            "owner_id": "643965814769",
            "tags": {
              "Name": "VPC IGW"
            },
            "tags_all": {
              "Name": "VPC IGW"
            },
            "vpc_id": "vpc-09da66d3fa47700bc"
          },
          "dependencies": [
            "aws_vpc.vpc_nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:643965814769:route-table/rtb-0adff8f500416d723",
            "id": "rtb-0adff8f500416d723",
            "owner_id": "643965814769",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0568adb378f78c732",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet RT"
            },
            "tags_all": {
              "Name": "Public Subnet RT"
            },
            "vpc_id": "vpc-09da66d3fa47700bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013d020fdf53e9f13",
            "route_table_id": "rtb-0adff8f500416d723",
            "subnet_id": "subnet-038517857c1f16e79"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.web-public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc_nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgweb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:643965814769:security-group/sg-06fbfeecd272e4b48",
            "description": "Allow incoming HTTP connections \u0026 SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06fbfeecd272e4b48",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_nginx_web",
            "name_prefix": "",
            "owner_id": "643965814769",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Server SG"
            },
            "tags_all": {
              "Name": "Web Server SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09da66d3fa47700bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:643965814769:subnet/subnet-038517857c1f16e79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-038517857c1f16e79",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "643965814769",
            "tags": {
              "Name": "Web Public Subnet"
            },
            "tags_all": {
              "Name": "Web Public Subnet"
            },
            "vpc_id": "vpc-09da66d3fa47700bc"
          },
          "dependencies": [
            "aws_vpc.vpc_nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:643965814769:vpc/vpc-09da66d3fa47700bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fcaf8c46010c4161",
            "default_route_table_id": "rtb-0cda729f10cfd6833",
            "default_security_group_id": "sg-0160212bfc0d9c159",
            "dhcp_options_id": "dopt-fa480b91",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09da66d3fa47700bc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cda729f10cfd6833",
            "owner_id": "643965814769",
            "tags": {
              "Name": "nginx-cluster"
            },
            "tags_all": {
              "Name": "nginx-cluster"
            }
          }
        }
      ]
    }
  ]
}